# pythonlings

./: .gitignore  README.md  exercises.toml  pyproject.toml
exercises/01_easy/: convert.py  count_repeats.py  count_vowels.py  filter_e.py  longest_word.py
exercises/02_medium/: decode.py  encode.py  file_processor.py  find_files_by_extension.py  group_anagrams.py  minmax_swap.py  most_frequent_common_word.py
exercises/03_hard/: can_exit_maze.py  can_segment.py  is_magic_square.py  is_sudoku_board_valid.py  rotate_matrix.py  tictactoe_game.py
exercises/04_leetcode_easy/: best_time_to_buy_sell_stock.py  climbing_stairs.py  contains_duplicate.py  missing_number.py  valid_palindrome.py
exercises/05_leetcode_medium/: coin_change.py  container_with_most_water.py  spiral_matrix.py
exercises/06_leetcode_hard/: first_missing_positive.py  maximum_subarray.py
src/pythonlings/: __init__.py  __main__.py  cli.py  config.py  exercise.py  runner.py  state.py  terminal.py  watcher.py
templates/01_easy/: count_palindromes.py  flip.py
templates/02_medium/: get_error_summary.py  get_winner.py  invert.py  most_shared_interest.py  roman_to_int.py  store.py  university.py  vehicles.py
templates/03_hard/: count_islands.py  simplify_fraction.py
templates/04_leetcode_easy/: majority_element.py  move_zeroes.py  single_number.py  two_sum.py  valid_parentheses.py
templates/05_leetcode_medium/: house_robber.py  jump_game.py  longest_increasing_subsequence.py  longest_substring_without_repeating.py  minimum_path_sum.py  product_except_self.py  rotate_image.py  set_matrix_zeroes.py  (+4 more)
(+9 files in other folders)
