[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pythonlings"
version = "0.1.0"
description = "Learn Python by solving exercises - inspired by rustlings!"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["python", "learning", "exercises", "cli", "rustlings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
pythonlings = "pythonlings.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pythonlings"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py311"
line-length = 88
